move private methods with one usage below their callers